# GAP-MS

./: .gitignore  ANNOTATION_COMPARISON_QUICK_REF.md  ANNOTATION_COMPARISON_README.md  APPTAINER_GUIDE.md  README.md  gapms.def  pyproject.toml  requirements.txt  setup.py  xgb_protein_classifier.pkl
BIP/: find_and_apply_score_cutoff.py
GAPMS/: filter_prediction.py  get_supported_and_highly_supported_proteins_genes.py  unite_gtf.py
Web-portal/: readme.txt
gapms/: bam_search.py  clips.pl  compare_supp_ref.py  extract.py  filter.py  gapms_annotation_report.py  generate_annotation_comparison_report.py  get_new_proteins.py  get_only_score_supported.py  gtf_utils.py  main.py  mapping_utils.py  model_utils.py  parse_gffcompare_tmap.py  peptide_utils.py  peptides_to_genome.py  plotting.py  promast.pl  score_filter.py  tools.py  translate.py
testing/: ROC_CURVE_CUTOFF_README.md  embeddings.py  extract.ipynb  extract1.ipynb  filter.ipynb  filter1.ipynb  gapms.ipynb  get_new_proteins.ipynb  get_new_proteins.py
tests/: helpers.py  run_gapms_full_bam.slurm  test_bam_gtf_compare.py  test_bam_search.py  test_compare_supp_ref.py  test_extract_pipeline.py  test_failure_cases.py  test_filter_predictions.py  test_gtf_subset_formats.py  test_gtf_utils.py  test_main_cli.py  test_peptide_utils.py  test_peptides_to_genome.py  test_score_filter.py  test_tools.py
tutorials/: Helixer_prediction.faa  NC_023759.2_genome_Sequence.fna.fai
